replaced random icon with bomb & fixed navbar alignment

--- a/dictionary/static/dictionary/css/index.css
+++ b/dictionary/static/dictionary/css/index.css
@@ -35,6 +35,22 @@ body {
     font-size: 3em;
 }
 
+.bomb {
+    height: 1.2em;
+    width: 1.2em;
+    margin-bottom: .3em;
+    margin-right: -1em;
+    color: white;
+	filter: invert(100%);
+}
+
+
+.fa-bomb {
+    color: white;
+}
+
+
+
 /*
 --------------------------------------------------------------
 Media Queries Aplenty
